Update CI to test some arguments.
This includes the commit of a Mathematica notebook (not cleaned!).

Signed-off-by: JP-Ellis <josh@jpellis.me>

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,37 +25,10 @@ addons:
       - libiberty-dev
 
 before_script:
-  - |
-      if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
-        ( cargo install clippy && export CLIPPY=true ) || export CLIPPY=false;
-      fi
-  - export PATH=$PATH:~/.cargo/bin
+  - bash ci/setup.sh
 
 script:
-  - cargo build
-  - cargo test
-  - |
-      if [[ "$TRAVIS_RUST_VERSION" == "nightly" && $CLIPPY ]]; then
-        cargo clippy
-      fi
+  - bash ci/script.sh
 
 after_success:
-  - |
-      if [[ "$TRAVIS_RUST_VERSION" == "stable" ]]; then
-        wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
-        tar xzf master.tar.gz &&
-        cd kcov-master &&
-        mkdir build &&
-        cd build &&
-        cmake .. &&
-        make &&
-        make install DESTDIR=../../kcov-build &&
-        cd ../.. &&
-        rm -rf kcov-master &&
-        for file in target/debug/mathematica_notebook_filter-*[^\.d]; do
-          mkdir -p "target/cov/$(basename $file)";
-          ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file";
-        done &&
-        bash <(curl -s https://codecov.io/bash) &&
-        echo "Uploaded code coverage"
-      fi
+  - bash ci/after_success.sh
