--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mathematica-notebook-filter"
-version = "0.1.2"
+version = "0.1.3-dev"
 authors = ["JP-Ellis <josh@jpellis.me>"]
 
 readme = "README.md"
@@ -25,7 +25,7 @@ codecov = { repository = "JP-Ellis/mathematica-notebook-filter", branch = "maste
 
 [dependencies]
 atty = "^0.2"
-clap = "^2.26"
+clap = "=2.26.0"
 tempfile = "2.1.6"
 log = "^0.3.8"
 env_logger = "^0.4.3"
