--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ travis-ci = { repository = "JP-Ellis/mathematica-notebook-filter", branch = "mas
 codecov = { repository = "JP-Ellis/mathematica-notebook-filter", branch = "master", service = "github" }
 
 [dependencies]
-atty = "0.2"
-clap = "2"
-tempfile = "2"
-log = "0.3"
-env_logger = "0.4"
+atty = "0.2.6"
+clap = "2.30.0"
+log = "0.4.1"
+stderrlog = "0.3.0"
+tempfile = "2.2.0"
